--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "unexpected-sinon": "^8.0.0"
   },
   "peerDependencies": {
-    "react": "^0.14.1",
+    "react": "^0.14.1 || ^15",
     "react-dom": "^0.14.1"
   },
   "browserify-shim": {
